--- a/ChartGenerator.WebAPI/ChartGenerator.WebAPI.csproj
+++ b/ChartGenerator.WebAPI/ChartGenerator.WebAPI.csproj
@@ -100,6 +100,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\ASDChartGenerator - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\ASDChartGenerator - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
